# VulkanOnD3D12

./: .clang-format  .gitignore  CMakeLists.txt  README.md  VulkanOnD3D12.sln  VulkanOnD3D12.vcxproj  VulkanOnD3D12.vcxproj.filters  VulkanOnD3D12_tests.vcxproj  VulkanOnD3D12_tests.vcxproj.filters  VulkanOnD3D12_uwp.vcxproj  VulkanOnD3D12_uwp.vcxproj.filters
Source/: VulkanOnD3D12_tests.cpp  _vulkan.cpp  _vulkan.h  pch.cpp  vkCmdBindDescriptorSets.cpp  vkCmdBindPipeline.cpp  vkCmdClearColorImage.cpp  vkCmdClearDepthStencilImage.cpp  vkCmdCopyBuffer.cpp  vkCmdCopyBufferToImage.cpp  vkCmdCopyImage.cpp  vkCmdDraw.cpp  vkCmdDrawIndexed.cpp  vkCmdEndQuery.cpp  vkCmdEndRenderPass.cpp  vkCmdExecuteCommands.cpp  vkCmdPipelineBarrier.cpp  vkCmdPushConstants.cpp  vkCmdResetEvent.cpp  vkCmdResolveImage.cpp  vkCmdSetEvent.cpp  vkCmdSetScissor.cpp  vkCmdSetStencilReference.cpp  vkCmdUpdateBuffer.cpp  vkCmdWaitEvents.cpp  vkCmdWriteTimestamp.cpp  vkCreateBuffer.cpp  vkCreateBufferView.cpp  vkCreateDebugReportCallbackEXT.cpp  vkCreateDescriptorSetLayout.cpp  vkCreateImageView.cpp  vkCreatePipelineLayout.cpp  vkCreateQueryPool.cpp  vkCreateSemaphore.cpp  vkCreateSwapchainKHR.cpp  vkCreateUWPSurfaceCHB.cpp  vkCreateWin32SurfaceKHR.cpp  vkDestroyBufferView.cpp  vkDestroyCommandPool.cpp  vkDestroyDescriptorPool.cpp  (+41 more)
include/vulkan/: vk_platform.h  vulkan.h  vulkan.hpp
src/: CMakeLists.txt  _vulkan.cpp  _vulkan.h  vkAcquireNextImageKHR.cpp  vkAllocateCommandBuffers.cpp  vkAllocateDescriptorSets.cpp  vkAllocateMemory.cpp  vkBeginCommandBuffer.cpp  vkBindBufferMemory.cpp  vkBindImageMemory.cpp  vkCmdBeginQuery.cpp  vkCmdBeginRenderPass.cpp  vkCmdBindDescriptorSets.cpp  vkCmdBindIndexBuffer.cpp  vkCmdBindPipeline.cpp  vkCmdBindVertexBuffers.cpp  vkCmdBlitImage.cpp  vkCmdClearAttachments.cpp  vkCmdClearColorImage.cpp  vkCmdClearDepthStencilImage.cpp  vkCmdCopyBuffer.cpp  vkCmdCopyBufferToImage.cpp  vkCmdCopyImage.cpp  vkCmdCopyImageToBuffer.cpp  vkCmdCopyQueryPoolResults.cpp  vkCmdDispatch.cpp  vkCmdDispatchIndirect.cpp  vkCmdDraw.cpp  vkCmdDrawIndexed.cpp  vkCmdDrawIndexedIndirect.cpp  vkCmdDrawIndirect.cpp  vkCmdEndQuery.cpp  vkCmdEndRenderPass.cpp  vkCmdExecuteCommands.cpp  vkCmdFillBuffer.cpp  vkCmdNextSubpass.cpp  vkCmdPipelineBarrier.cpp  vkCmdPushConstants.cpp  vkCmdResetEvent.cpp  vkCmdResetQueryPool.cpp  (+124 more)
src/cube/: CMakeLists.txt  cube-frag.cso  cube-frag.spv  cube-vert.cso  cube-vert.spv  cube.c  cube.cpp
src/spirv_cross/: CMakeLists.txt
src/vulkaninfo/: CMakeLists.txt
